# cmake_cude

./: README.md
cmake_cuda/LibCuda/: CMakeLists.txt
cmake_cuda/LibCuda/include/: libcuda.h
cmake_cuda_example/: CMakeLists.txt  main.cpp
cmake_cuda_example/LibCuda/: CMakeLists.txt  libcuda.cu
cmake_hello/: CMakeLists.txt  main.cpp
cmake_hello_lib/: CMakeLists.txt  gen_vs2019_sln.bat  main.cpp
cmake_hello_lib/Lib/: CLib.cpp  CMakeLists.txt
cmake_hello_lib/Lib/include/: CLib.h  ILib.h
cmake_qt_automoc_example/qt_qmake_proj/: CMakeLists.txt  mainwindow.ui
cmake_qt_example/: CMakeLists.txt
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  helloqt.ilk
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-e50a56b6b87ef4afc075.json  codemodel-v2-cedf99976ef783f9b7eb.json  index-2021-05-20T15-20-05-0442.json  target-helloqt-Debug-2ca075ce3f9ec4900306.json  target-helloqt_autogen-Debug-3b14f076e22ee8b6f08a.json  target-helloqt_autogen_timestamp_deps-Debug-2ef42af073dad85e6e40.json
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-e52b02890321a965f4a0.json  codemodel-v2-5919175a49810f34b7a7.json  index-2021-05-20T14-54-12-0419.json  target-helloqt-Debug-51ae8010aeefab7af133.json
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/helloqt_autogen/: deps
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/helloqt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
cmake_qt_example/build-helloqt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/helloqt_autogen/include/: ui_mainwindow.h
cmake_qt_example/cmake_qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
cmake_qt_example/helloqt/: CMakeLists.txt  mainwindow.ui
